# Voix

./: .clang-tidy  .gitignore  ARCH_LINUX_SETUP.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFIG_PROPOSAL.md  CONTRIBUTING.md  LICENSE  LICENSE-AGPLv3  LICENSE-VCL1.0  README.md  THREATS.md  TODO.md  VOIX.md  config.fish  diff.txt  perf.data  plan.md  test_file_utils  update-plan.md  version.lua  voix.conf
.devin/: wiki.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  discussion-category.yml
.github/DISCUSSION_TEMPLATE/: general.md  ideas.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  enhancement.md  feature_request.md  question.md  security_issue.md  security_vulnerability.md
.github/workflows/: apisec-scan.yml  build.yml  ci.yml  codeql.yml  release.yml  tests.yml
build-dbg/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  voix
build-dbg/tests/: CTestTestfile.cmake  cmake_install.cmake  test_runner
cmake/: SetuidInstall.cmake
config/: voix.conf  voix.lua
docs/: CLI.md  CLI_REFERENCE.md  CODE_REVIEW.md  CONFIG.md  CONFIGURATION.md  SECCOMP.md  SECCOMP_PLAN.md  SUDO.md  TESTING.md  USAGE_AS_SUDO_REPLACEMENT.md  voix.1  voix.conf.example
include/: authenticator.h  authenticator.hpp  command.h  command.hpp  config.h  config.hpp  file_utils.h  file_utils.hpp  logger.h  logger.hpp  lua_config.h  pam_auth.h  pam_utils.h  pam_utils.hpp  permission_checker.h  permission_checker.hpp  rule.h  rule.hpp  security.h  security.hpp  system_identity.h  system_identity.hpp  system_utils.h  system_utils.hpp  utils.h  voix.h  voix.hpp
packaging/: README.md
pam.d/: voix
src/: authenticator.cpp  command.cpp  config.cpp  file_utils.cpp  logger.cpp  lua_config.cpp  main.cpp  pam_auth.cpp  pam_utils.cpp  permission_checker.cpp  security.cpp  system_identity.cpp  system_utils.cpp  utils.cpp  voix.cpp
tests/: CMakeLists.txt  main.cpp  test_assert.hpp  test_config.cpp  test_file_utils.cpp  test_main.cpp  test_main.h  test_runner.cpp  test_security.cpp
